--- a/Prinfo/pom.xml
+++ b/Prinfo/pom.xml
@@ -12,5 +12,9 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Projet info</name>
   <description>projet info</description>
+  <properties>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+</properties>
   
 </project>
