--- a/Prinfo/pom.xml
+++ b/Prinfo/pom.xml
@@ -1,20 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <dependencies>
-    <dependency>
-    <groupId>com.googlecode.json-simple</groupId>
-    <artifactId>json-simple</artifactId>
-    <version>1.1.1</version>
-    </dependency>
-  </dependencies>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>fr.tse.fise2</groupId>
-  <artifactId>Prinfo</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>Projet info</name>
-  <description>projet info</description>
-  <properties>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.source>1.8</maven.compiler.source>
-</properties>
-  
+	<dependencies>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.32.3.2</version>
+		</dependency>
+	</dependencies>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>fr.tse.fise2</groupId>
+	<artifactId>Prinfo</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>Projet info</name>
+	<description>projet info</description>
+	<properties>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+	</properties>
+
 </project>
